--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>Layer Selector Config Widget DEV</title>
   <link rel="stylesheet"
     href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.0.3/css/calcite-web.min.css" />
-  <link rel="stylesheet" type="text/css" href="./node_modules/@esri/calcite-components/dist/calcite/calcite.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="./node_modules/@esri/calcite-components/dist/calcite/calcite.css" /> -->
 </head>
 
 <body>
